force-app/main/default/objects/ItemReservation__c/ItemReservation__c.object-meta.xml
<CustomObject>
    <description>Represent each item the is reserved in a rental</description>
    <label>Item Reservation</label>
    <nameField>
        <displayFormat>RIR-{00000000}</displayFormat>
        <label>Item Reservation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>