force-app/main/default/objects/ItemReservation__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The date the item reservation ends.</description>
    <inlineHelpText>The date the item reservation ends.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>