force-app/main/default/objects/ItemReservation__c/fields/InventoryItem__c.field-meta.xml
<CustomField>
    <fullName>InventoryItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Product from Inventory that is being reserved for the Rental.</description>
    <inlineHelpText>The Product from Inventory that is being reserved for the Rental.</inlineHelpText>
    <label>Inventory Item</label>
    <referenceTo>InventoryItem__c</referenceTo>
    <relationshipLabel>Item Reservations</relationshipLabel>
    <relationshipName>ItemReservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>