force-app/main/default/objects/ItemReservation__c/fields/LocationName__c.field-meta.xml
<CustomField>
    <fullName>LocationName__c</fullName>
    <description>Name of Inventory Location</description>
    <formula>InventoryItem__r.Location__r.Name</formula>
    <inlineHelpText>Name of Inventory Location</inlineHelpText>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>