force-app/main/default/objects/ItemReservation__c/fields/PerDayTotalRental__c.field-meta.xml
<CustomField>
    <fullName>PerDayTotalRental__c</fullName>
    <description>The Total Amount Per Day for the Item Rental</description>
    <formula>PerDayUnitRental__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Amount Per Day for the Item Rental</inlineHelpText>
    <label>Per Day Total Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>