force-app/main/default/objects/ItemReservation__c/fields/PerDayUnitRental__c.field-meta.xml
<CustomField>
    <fullName>PerDayUnitRental__c</fullName>
    <description>Rental Amount Per Day for each Unit</description>
    <inlineHelpText>Rental Amount Per Day for each Unit</inlineHelpText>
    <label>Per Day Unit Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>