force-app/main/default/objects/ItemReservation__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Product Name of Reservation Item</description>
    <formula>InventoryItem__r.RentalProduct__r.Name</formula>
    <inlineHelpText>Product Name of Reservation Item</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>