force-app/main/default/objects/ItemReservation__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The Number of items to reserve.</description>
    <inlineHelpText>The Number of items to reserve.</inlineHelpText>
    <label>Quantity</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>