force-app/main/default/objects/ItemReservation__c/fields/Rental__c.field-meta.xml
<CustomField>
    <fullName>Rental__c</fullName>
    <description>The Parent Rental for the Item Reservation.</description>
    <inlineHelpText>The Parent Rental for the Item Reservation.</inlineHelpText>
    <label>Rental</label>
    <referenceTo>Rental__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>