force-app/main/default/objects/ItemReservation__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The date the item reservation starts.</description>
    <inlineHelpText>The date the item reservation starts.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>