force-app/main/default/objects/ItemReservation__c/fields/TotalRental__c.field-meta.xml
<CustomField>
    <fullName>TotalRental__c</fullName>
    <description>Total Amount of the Rental</description>
    <formula>PerDayTotalRental__c * ( EndDate__c -  StartDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of the Rental</inlineHelpText>
    <label>Total Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>