force-app/main/default/objects/ItemReservation__c/validationRules/ItermReservation_EndDateAfterStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ItermReservation_EndDateAfterStartDate</fullName>
    <active>true</active>
    <description>The Item Reservation&apos;s End Date must be after the Start Date</description>
    <errorConditionFormula>StartDate__c &gt;  EndDate__c</errorConditionFormula>
    <errorMessage>The End Date must be after the Start Date</errorMessage>
</ValidationRule>